[package]
name = "parami-cli"
version = "3.1.0"
authors = ["Parami Devs <info@parami.io>"]
description = "Parami node implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "parami"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "parami"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.14"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
parking_lot = "0.11.1"
serde_json = "1.0"

# primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
grandpa-primitives = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", package = "sp-finality-grandpa" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-authorship = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-inherents = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-keyring = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-keystore = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-consensus = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }

# client dependencies
sc-client-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-network = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
grandpa = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", package = "sc-finality-grandpa" }
sc-client-db = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-rpc = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-service = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", optional = true }

# frame dependencies
pallet-indices = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-balances = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-staking = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }

# parami-specific dependencies
parami-runtime = { version = "2.0.0", path = "../runtime" }
parami-rpc = { version = "2.0.0", path = "../rpc" }
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-executor = { version = "2.0.0", path = "../executor" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", optional = true }
parami-inspect = { version = "0.8.0", optional = true, path = "../inspect" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", package = "substrate-browser-utils", optional = true }
libp2p-wasm-ext = { version = "0.28", features = ["websocket"], optional = true }

[target.'cfg(target_arch="x86_64")'.dependencies]
parami-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", optional = true, features = [ "wasmtime" ] }
sc-service = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", default-features = false, features = [ "wasmtime" ] }
sp-trie = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
regex = "1"
platforms = "1.1"

sc-keystore = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-service-test = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
parami-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", optional = true }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", version = "3.0.0", optional = true }
substrate-frame-cli = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", optional = true }

[features]
default = [ "cli" ]
browser = [
    "browser-utils",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "libp2p-wasm-ext",
]
cli = [
    "parami-executor/wasmi-errno",
    "parami-inspect",
    "sc-cli",
    "frame-benchmarking-cli",
    "substrate-frame-cli",
    "sc-service/db",
    "sc-finality-grandpa-warp-sync",
    "structopt",
    "substrate-build-script-utils",
]
runtime-benchmarks = [
    "parami-runtime/runtime-benchmarks",
    "frame-benchmarking-cli",
]
