[package]
name = "parami-executor"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
trie-root = "0.16.0"
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-runtime = { version = "2.0.0", path = "../runtime" }
sc-executor = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-io = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-trie = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }

[dev-dependencies]
criterion = "0.3.0"
parami-testing = { version = "2.0.0", path = "../testing" }
wat = "1.0"
futures = "0.3.9"

frame-support = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", version = "3.1.0" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-indices = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-session = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-externalities = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
substrate-test-client = { version = "2.0.1", git = "https://github.com/paritytech/substrate" }

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
