[package]
name = "parami-executor"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
trie-root = "0.16.0"
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-runtime = { version = "2.0.0", path = "../runtime" }
sc-executor = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-keystore = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-trie = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }

[dev-dependencies]
criterion = "0.3.0"
parami-testing = { version = "2.0.0", path = "../testing" }
wat = "1.0"
futures = "0.3.9"

frame-support = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-balances = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-indices = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-session = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-externalities = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
substrate-test-client = { version = "2.0.1", git = "https://github.com/paritytech/substrate" }

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
