[package]
name = "parami-inspect"
version = "0.8.0"
authors = ["Parami Devs <info@parami.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99"
log = "0.4.14"
structopt = "0.3.8"
sc-cli = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-client-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-service = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
