[package]
authors = ['Parami Devs <info@parami.io>']
build = 'build.rs'
description = 'Parami Dana Node.'
edition = '2018'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[[bin]]
name = 'parami'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.parami-linker]
path = '../pallets/linker'

[dependencies.parami-runtime]
path = '../runtime'

[dependencies.parami-swap-rpc]
path = '../pallets/swap/rpc'

[dependencies]
jsonrpc-core = '18.0.0'
rand = '0.7'
serde_json = '1.0'
structopt = '0.3.8'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.pallet-contracts-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.pallet-im-online]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.pallet-mmr-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-consensus-babe-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-consensus-epochs]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-consensus-uncles]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-finality-grandpa-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-sync-state-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.serde]
features = ['derive']
version = '1.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-keystore]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
rev = '69e384bae9f6189089d2136edb560644964b8788'

[features]
default = []

runtime-benchmarks = ['parami-runtime/runtime-benchmarks']
