[package]
authors = ['Parami Devs <info@parami.io>']
edition = '2018'
homepage = 'https://parami.io'
license = 'Apache-2.0'
name = 'parami-primitives'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.11'

[features]
default = ['std']

std = [
    'sp-core/std',
    'sp-runtime/std'
]
