[package]
authors = ['Parami Devs <info@parami.io>']
edition = '2021'
homepage = 'https://parami.io'
license = 'Apache-2.0'
name = 'parami-primitives'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies]
serde = { version = '1.0', optional = true }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

[features]
default = ['std']

std = ['serde', 'codec/std', 'scale-info/std', 'sp-core/std', 'sp-runtime/std']
