[package]
name = "parami-rpc"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-runtime = { version = "2.0.0", path = "../runtime" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sc-keystore = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-api = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.9.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
