[package]
name = "parami-rpc"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-runtime = { version = "2.0.0", path = "../runtime" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", version = "3.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-client-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-keystore = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-rpc = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-keystore = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-consensus = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
