[package]
name = "parami-rpc"
version = "2.0.0"
authors = ["Parami Devs <info@parami.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "18.0.0"
parami-primitives = { version = "2.0.0", path = "../primitives" }
parami-runtime = { version = "2.0.0", path = "../runtime" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-keystore = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-rpc = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-api = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-keystore = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-consensus = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }
